<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="text_intro">Droid Desserts</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_description">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label">Name :</string>
    <string name="name_text_hint">Enter your name</string>
    <string name="address_label">Address :</string>
    <string name="address_text_hint">Enter your address</string>
    <string name="phone_label">Phone :</string>
    <string name="phone_text_hint">Enter your phone number</string>
    <string name="note_label">Note :</string>
    <string name="note_text_hint">Enter your note here</string>
    <string name="delivery_label">Choose a delivery method</string>
    <string name="same_day_radio">Same day messenger service</string>
    <string name="next_day_delivery">Next day ground delivery</string>
    <string name="pick_up_delivery">Pick up</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
<!--    Menu Item-->
    <string name="action_settings">Settings</string>
    <string name="menu_item_contact">Contact</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_status">Status</string>
    <string name="menu_item_order">Order</string>
<!--    Menu Item click action-->
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
</resources>