<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".OrderActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />

    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/order_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        />
<!--    Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            />
        <EditText
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name_text_hint"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>
<!--    Address-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            />
        <EditText
            android:id="@+id/address_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/address_text_hint"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>
<!--    Phone Number-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:weightSum="2">
        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_label"
            />
        <EditText
            android:id="@+id/phone_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_text_hint"
            android:imeOptions="actionSend"
            android:layout_marginStart="8dp"
            />
        <!-- Adding padding for walk-around bug not show spinner text when select -->
        <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginStart="12dp"
            android:padding="2dp"
            />
    </LinearLayout>
<!--    Note-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_label"
            />
        <EditText
            android:id="@+id/note_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/note_text_hint"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>
<!--    Delivery method-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp">
        <TextView
            android:id="@+id/delivery_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_label"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/sameday">
            <RadioButton
                android:id="@+id/sameday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/same_day_radio"/>
            <RadioButton
                android:id="@+id/nextday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/next_day_delivery"/>
            <RadioButton
                android:id="@+id/pickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pick_up_delivery"/>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>